--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Stan Shih</textarea>
 		</div>
 	</div>
 	<div id="copyright">
-		<span>The tool made by <a href="" target="http://baconbao.github.io/Resume/timeline/">BaconBao Lin</a>. Source code on <a href="https://github.com/baconbao/BaconLottery" target="_blank">GitHub</a></span>
+		<span>The tool made by <a href="" target="http://baconbao.github.io/Resume/timeline/">BaconBao Lin</a>. Source code on <a href="https://github.com/baconbao/LuckyBacon" target="_blank">GitHub</a></span>
 	</div>
 </body>
 </html>
