--- a/index.html
+++ b/index.html
@@ -235,12 +235,14 @@
 				for(var m=0; m<winner[k].length; m++){
 					$('#results').append('<span class="pnw">'+winner[k][m]+'</span>');
 				}
+				if(winner[k].length===0) $('#results').append('<span class="pnw">--Empty--</span>');
 			}
 			console.log('--------------ENDING--------------');
 			$('#content').fadeOut();
 			$('#footer').fadeOut(function(){
 				$('#results').fadeIn()
 			});
+			ga('send', 'pageview', 'showResult');
 		});
 
 		/*--===========
@@ -329,5 +331,15 @@ Stan Shih</textarea>
 	<div id="copyright">
 		<span>The tool made by <a href="" target="http://baconbao.github.io/Resume/timeline/">BaconBao Lin</a>. Source code on <a href="https://github.com/baconbao/LuckyBacon" target="_blank">GitHub</a></span>
 	</div>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-65191016-4', 'auto');
+	  ga('send', 'pageview', 'index');
+
+	</script>
 </body>
 </html>
