--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Stan Shih</textarea>
 		</div>
 	</div>
 	<div id="copyright">
-		<span>The tool made by <a href="" target="http://baconbao.github.io/Resume/timeline/">BaconBao Lin</a>. Source code on <a href="https://github.com/baconbao/LuckyBacon" target="_blank">GitHub</a></span>
+		<span>The tool made by <a href="https://baconbao.github.io/" target="_blank">BaconBao Lin</a>. Source code on <a href="https://github.com/baconbao/LuckyBacon" target="_blank">GitHub</a></span>
 	</div>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
