--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 		$("#add_price").click(function(){
 			temp_price_list_count++;
-			$('#price_list').append('<div class="priceBox"><span class="priceNumber">'+'Speaker #'+temp_price_list_count+'</span><button class="btn btn-default btn-sm decrease">-</button>Pick<span class="count"> 1 </span>person<button class="btn btn-default btn-sm increase">+</button></div>');
+			$('#price_list').append('<div class="priceBox"><span class="priceNumber">'+'Speaker #'+temp_price_list_count+'</span>Pick<span class="count"> 1 </span>person</div>');
 
 			setClickBind();
 
@@ -166,7 +166,7 @@
 			}
 
 		});
-		$('#restart').click(function(){ document.location.reload(); });
+		$('#restart').click(function(){ document.location.reload(); candidates = []});
 
 		/*--===================
 			Works after start. 
@@ -204,11 +204,11 @@
 				candidates.push(p);
 			}
 			showArray('[init] ', candidates);
-			$('#candidates_count').text('本次共'+candidates.length+'位抽獎者');
+			// $('#candidates_count').text('There are '+candidates.length+' speakers');
 
 			/*--- Candidates' Data check ---*/
 			if(candidates.length<temp_total_count){
-				alert('名單少於獎項名額。');
+				alert('list is shorter than the speakers。');
 				console.log('--------------ENDING--------------');
 				return false;
 			}
@@ -310,28 +310,22 @@ Ash
 			</div>
 			<div class="right">
 				<button id="add_price" class="btn btn-circle btn-danger">+</button>
-				<div id="intro1">Add a new one! →</div>
+				<div id="intro1">Add a new speaker! →</div>
 				<div id="price_list">
-					<div class="priceBox"><span class="priceNumber">Speaker #1</span><button class="btn btn-default btn-sm decrease">-</button>Pick<span class="count"> 1 </span>person<button class="btn btn-default btn-sm increase">+</button></div>
+					<div class="priceBox"><span class="priceNumber">Speaker #1</span>Pick<span class="count"> 1 </span>person</div>
 				</div>
 				<button id="letsgo" class="btn btn-success">Start！</button>
 			</div>
 		</div>
 		<div id="footer">
 			Note.<br />
-			<span>1. <b style="color: #4285f4;">請將名單填入上方輸入框，並以換行做分隔。</b><br /></span>
-			<span>2. 抽獎順序為： 獎項#1 → 獎項#2 → ...... → 獎項#N。<br /></span>
-			<span>3. 每一輪獎項的名單皆會排除上一輪的中獎者。<br /></span>
-			<span>4. 亂數抽取算法採用 <a href="http://stackoverflow.com/a/2450976" target="_blank">The Fisher-Yates (aka Knuth) shuffle</a><br /></span>
+			<span>1. <b style="color: #4285f4;">Please fill the name list in the textarea above and put new name in a new line</b><br /></span>
+			<span>2. Random algortithm was using : <a href="http://stackoverflow.com/a/2450976" target="_blank">The Fisher-Yates (aka Knuth) shuffle</a><br /></span>
 		</div>
 		<div id="results">
-			<span id="candidates_count">123</span>
 			<button id="restart" class="btn btn-success">Restart</button>
 			<div id="congrats">Congrats！</div>
 		</div>
-	</div>
-	<div id="copyright">
-		<span>The tool made by <a href="https://baconbao.github.io/" target="_blank">BaconBao Lin</a>. Source code on <a href="https://github.com/baconbao/LuckyBacon" target="_blank">GitHub</a></span>
 	</div>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
