--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 	}
 	#copyright {
 		padding-top: 5px;
+		padding-bottom: 5px;
+		padding-right: 10px;
 		width: 800px;
-		margin: 0 auto;
-		text-align: center;		
+		
+		text-align:end		
 	}
 	#box {
 		width: 800px;
@@ -53,6 +55,9 @@
 		border-top: 1px solid #ddd;
 		padding: 10px 15px;
 		color: #777;
+	}
+	#go-back{
+
 	}
 	#footer a {
 		color: #777;
@@ -326,6 +331,7 @@ Ash
 			<button id="restart" class="btn btn-success">Restart</button>
 			<div id="congrats">Congrats！</div>
 		</div>
+		<div id="copyright"> <a href="https://ashzhang.xyz"><button id="go-back" class="btn btn-info">Back to blog</button></a> </div>
 	</div>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
