--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@ Ash
 			<button id="restart" class="btn btn-success">Restart</button>
 			<div id="congrats">Congrats！</div>
 		</div>
+		<div id="copyright"> <a href="https://ashzhang.xyz"><button id="go-back" class="btn btn-info">Back to blog</button></a> </div>
 	</div>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
